tests/typechecker/pass/009-mutable-vars.hyg
let mutable x = 3;
x <- x + 1;
assert(x = 4)
