tests/typechecker/fail/copy2.hyg
let f = fun (x: int) -> x + 1;
let g = copy(f);
g